# TGSpeechBox

./: .gitignore  CMakeLists.txt  Developers.md  LICENSE  Makefile.linux  README-linux.md  README-phoneme-editor.md  Tuning.md  readme.md  speechPlayer.py
.github/workflows/: build-linux.yml
extras/speech-dispatcher/: README.md  nvsp-generic.conf  tgsb-generic.conf
nvdaAddon/: manifest.ini
nvdaAddon/globalPlugins/: tgSpeechBox.py
nvdaAddon/locale/es/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/hu/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/locale/pt_BR/LC_MESSAGES/: nvda.mo  nvda.po
nvdaAddon/synthDrivers/nvSpeechPlayer/: __init__.py  _dll_utils.py  _frontend.py  audio.py  constants.py  langPackSettingsPanel.py  profile_utils.py  speechPlayer.py  text_utils.py
nvdaAddon/synthDrivers/tgSpeechBox/: __init__.py  _dll_utils.py  _frontend.py  audio.py  constants.py  dict_overlay.py  langPackSettingsPanel.py  langPackYaml.py  migrate_config.py  text_utils.py
packs/: phonemes.yaml
packs/dict/: en-us-stress-verified.tsv  en-us-stress.tsv
packs/dicts/: en-us.tsv
packs/lang/: bg.yaml  cs.yaml  da.yaml  de.yaml  default.yaml  en-ca.yaml  en-gb.yaml  en-us.yaml  en.yaml  es-mx.yaml  es.yaml  fi.yaml  fr.yaml  hr.yaml  hu.yaml  it.yaml  nl.yaml  pl.yaml  pt-br.yaml  pt-pt.yaml  pt.yaml  ro.yaml  ru.yaml  sk.yaml  sv.yaml  uk.yaml
src/: debug.h  dspCommon.h  formantGenerator.h  frame.cpp  frame.h  lock.h  pitchModel.h  resonator.h  sample.h  speechPlayer.cpp  speechPlayer.def  speechPlayer.h  speechWaveGenerator.cpp  speechWaveGenerator.h  utils.h  voiceGenerator.h  voicingTone.h  waveGenerator.h
src/extras/speech-dispatcher/: nvsp-generic.conf
src/frontend/: frame_emit.cpp  ipa_engine.cpp  ipa_engine.h  nvspFrontend.cpp  nvspFrontend.h  pack.cpp  pack.h  pron_dict.cpp  pron_dict.h  text_parser.cpp  text_parser.h  utf8.cpp  utf8.h  voice_profile.cpp  voice_profile.h  yaml_min.cpp  yaml_min.h
src/frontend/passes/: allophones.cpp  allophones.h  boundary_smoothing.cpp  boundary_smoothing.h  cluster_blend.cpp  cluster_blend.h  cluster_timing.cpp  cluster_timing.h  coarticulation.cpp  coarticulation.h  diphthong_collapse.cpp  diphthong_collapse.h  length_contrast.cpp  length_contrast.h  liquid_dynamics.cpp  liquid_dynamics.h  microprosody.cpp  microprosody.h  nasalization.cpp  nasalization.h  pass_common.h  pass_pipeline.cpp  pass_pipeline.h  pitch_common.h  pitch_espeak.cpp  pitch_espeak.h  pitch_fujisaki.cpp  pitch_fujisaki.h  pitch_impulse.cpp  pitch_impulse.h  pitch_klatt.cpp  pitch_klatt.h  pitch_legacy.cpp  pitch_legacy.h  prominence.cpp  prominence.h  prosody.cpp  prosody.h  rate_compensation.cpp  rate_compensation.h  (+8 more)
src/sapi/: IEnumSpObjectTokensImpl.cpp  IEnumSpObjectTokensImpl.hpp  ISpDataKeyImpl.cpp  ISpDataKeyImpl.hpp  ISpTTSEngineImpl.cpp  ISpTTSEngineImpl.hpp  TGSpeechSapi.def  com.cpp  com.hpp  debug_log.h  registry.cpp  registry.hpp  sapi_main.cpp  tgsb_runtime.cpp  tgsb_runtime.hpp  tgsb_settings.cpp  tgsb_settings.hpp  utils.hpp  voice_attributes.hpp  voice_token.cpp  voice_token.hpp
tools/: apply_fricative_stage1.py  apply_sonorant_fix.py  compile_mo.py  data_py_to_phonemes_yaml.py  formant_trajectory.py  frame_inspector.py  gen_nvda_api_ref.py  generate_lang_pack.py  hillenbrand_tune.py  ipa_klatt_probe.py  klatt_tune_sim.py  lang_pack.py  nvda_api_ref.md  nvspRender.cpp  phonemes-older.yaml  rename_sapi.py  simple_yaml.py  stress_audit.tsv  tgsbRender.cpp  tgspRender.cpp  update_headers.py  verify_stress_dict.py
tools/cmudict/: convert_cmu_to_ipa.py
tools/linux/: install.sh  tgsp
tools/nvspPhonemeEditorWin32/: AppController.cpp  AppController.h  CMakeLists.txt  Dialogs.cpp  Dialogs.h  README.md  VoiceProfileEditor.cpp  VoiceProfileEditor.h  WinUtils.cpp  WinUtils.h  main.cpp  nvsp_runtime.cpp  nvsp_runtime.h  phonemizer_cli.cpp  process_util.cpp  process_util.h  resource.h  resources.rc  wav_writer.cpp  yaml_edit.cpp  yaml_edit.h
tools/tgsbPhonemeEditorWin32/: AccessibilityUtils.cpp  AccessibilityUtils.h  AppController.h  CMakeLists.txt  Dialogs.cpp  Dialogs.h  RulesEditor.cpp  RulesEditor.h  VoiceProfileEditor.cpp  VoiceProfileEditor.h  WinUtils.cpp  WinUtils.h  appcontroller.cpp  chunking.cpp  chunking.h  main.cpp  phonemizer_cli.cpp  phonemizer_cli.h  process_util.cpp  process_util.h  resource.h  resources.rc  tgsb_runtime.cpp  tgsb_runtime.h  wav_writer.cpp  wav_writer.h  yaml_edit.cpp  yaml_edit.h
tools/tgsbSapiSettings/: resource.h  settings_app.cpp  settings_app.rc
